<resources>

    <string name="app_name">MyMusic</string>
    <string name="menu_local_music">本地音乐</string>
    <string name="menu_my_downloads">我的下载</string>
    <string name="menu_my_fav">我喜欢听</string>
    <string name="menu_my_default_list">我的列表</string>
    <string name="menu_recently">最近播放</string>
    <string name="scan_music_in_sdcard">扫描手机音乐</string>
    <string name="filter_music">过滤</string>
    <string name="stop_scan">停止</string>
    <string name="scan_finish">扫描完成</string>
    <string name="scan_music">扫描音乐</string>
    <string name="scan_was_stoped">扫描已停止</string>
    <string name="no_musics">没有音乐</string>
    <string name="song_name">Song Name</string>
    <string name="local_music">本地歌曲</string>
    <string name="download_music">下载歌曲</string>
    <string name="recently_music">最近歌曲</string>
    <string name="fav_music">我喜欢的</string>
    <string name="refreshing_music">正在刷新</string>
    <string name="widget_initial_text">点击进行播放</string>
    <string name="delete">删除</string>
    <string name="app_exit">退出</string>
    <string name="detail">详细信息</string>
    <string name="choose_operate">请选择操作</string>
    <string name="delete_file_error">删除文件失败</string>
    <string name="delete_file_success">删除文件成功</string>
    <string name="login_not_register1_qq">没有账号?点击这里</string>
    <string name="reg_login">已有帐号?点击这里</string>
    <string name="login_not_register2_qq">快速注册</string>
    <string name="login">登    录</string>
    <string name="reg">注册</string>
    <string name="user_reg">用户注册</string>
    <string name="refreshing_music_stand_by">刷新中,请稍候...</string>
    <string name="scan_finished">已找到歌曲%s首</string>
    <string name="song_info">歌曲信息</string>
    <string name="cur_play_mode">处于%s模式</string>
    <string name="cur_song">歌曲名称</string>
    <string name="cur_song_singer">歌曲歌手</string>
    <string name="exit_when_click_again">再按一次返回桌面</string>
    <string name="http_status_code_error">http状态异常</string>
    <string name="http_exception_error">网络异常</string>
    <string name="socket_exception_error">套接字异常</string>
    <string name="network_not_connected">没有网络连接</string>
    <string name="xml_parser_failed">xml解析异常</string>
    <string name="io_exception_error">IO异常</string>
    <string name="app_run_code_error">程序运行异常</string>
    <string name="no_net_work">对不起,无网络连接,请检测网络后,重新再试</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载中</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">点击查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="username_empty">用户名不能为空</string>
    <string name="password_empty">密码不能为空</string>
    <string name="email_empty">邮箱不能为空</string>
    <string name="email_error_formart">错误的邮箱格式</string>
    <string name="tel_empty">电话不能为空</string>
    <string name="tel_error_format">电话格式不正确</string>
    <string name="pwd_empty">密码不能为空</string>
    <string name="re_pwd_empty">再次输入密码</string>
    <string name="pwd_not_equal">两次输入的密码不同</string>
    <string name="user_not_exit">对不起,没有此用户</string>
    <string name="password_incorrect">密码不正确</string>
    <string name="login_success">登录成功</string>
    <string name="user_exit">该用户已经存在</string>
    <string name="reg_success">注册成功</string>
    <string name="welcome_user">%s,欢迎你回来.</string>
    <string name="play_list">播放列表</string>

</resources>